--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -30,3 +30,6 @@ jobs:
       
     - name: Run tests
       run: ./gradlew testDebug
+
+  - name: Kotlinx Kover Report
+    uses: mi-kas/kover-report@v1.2-beta
