--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -38,6 +38,7 @@ jobs:
       uses: mi-kas/kover-report@v1
       with:
         path: ${{ github.workspace }}/build/reports/kover/merged/xml/report.xml
+        token: ${{ secrets.GITHUB_TOKEN }}
         title: Code Coverage
         update-comment: true
 
