--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -41,4 +41,6 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         title: Code Coverage
         update-comment: true
+        # min-coverage-overall: 80
+        min-coverage-changed-files: 80
 
