--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,12 +12,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: set up JDK 11
+    - name: set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         cache: gradle
+    - run: ./gradlew build --no-daemon
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
